--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-github-calendar": "^4.5.1",
     "react-icons": "^5.3.0",
     "tailwindcss": "3.4.14",
     "typescript": "5.6.3"
